# spintax-permutations

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  errors.cpp  errors.hpp  main.cpp  spintax.cpp  spintax.hpp
tests/: CMakeLists.txt  test_parser.cpp
tests/data/: test0.txt  test1.txt  test2.txt
